tests/rustdoc-ui/ice-bug-report-url.stderr
error: expected one of `->`, `where`, or `{`, found `<eof>`
  --> $DIR/ice-bug-report-url.rs:14:10
   |
LL | fn wrong()
   |          ^ expected one of `->`, `where`, or `{`

thread panicked at 'aborting due to `-Z treat-err-as-bug`'
stack backtrace:

error: the compiler unexpectedly panicked. this is a bug.

note: we would appreciate a bug report: https://github.com/rust-lang/rust/issues/new?labels=C-bug%2C+I-ICE%2C+T-rustdoc&template=ice.md

note: rustc {version} running on {platform}

query stack during panic:
end of query stack
